package exception.base;

public class IceCreamException extends Exception{
    public IceCreamException(String message) {
        super(message);
    }
}
