package exception.file;

import exception.base.IceCreamException;

public class FileDataException extends IceCreamException{
    public FileDataException(String massage) {
        super(massage);
    }
}
