package exception.validation;

public class InvalidSearchDataException extends InvalidDataException{
    public InvalidSearchDataException(String massage) {
        super(massage);
    }
}
