package type;

public enum SortDirection {
    ASCENDING,
    DESCENDING
    
}
